@@ -37,7 +37,8 @@ EXTERN neko_vm *neko_vm_alloc( void *unused );
 EXTERN neko_vm *neko_vm_current();
 EXTERN value neko_exc_stack( neko_vm *vm );
 EXTERN value neko_call_stack( neko_vm *vm );
-EXTERN value neko_vm_vars( neko_vm *vm );
+EXTERN void *neko_vm_custom( neko_vm *vm, vkind k );
+EXTERN void neko_vm_set_custom( neko_vm *vm, vkind k, void *v );
 EXTERN value neko_vm_execute( neko_vm *vm, void *module );
 EXTERN void neko_vm_select( neko_vm *vm );
 EXTERN int neko_vm_jit( neko_vm *vm, int enable_jit );
