@@ -11,6 +11,9 @@
 	fix for 64-bit CPU
 	minor optimization for [0] jit array access
 	gnuk/freebsd support
+	fixed thread messages on Windows (do not use system queue)
+	thread_current returns unique value
+	remove kind_import, kind_export, added kind_share
 	TODO : FIX OO for JIT AS WELL
 	TODO : process output capture
 
